--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>Hello world, I am 2720132</h1>
+     <p> <a href="2720132-lab2.html">My Portfolio</a></p>
 </body>
 </html>
