--- a/2720132-lab2.html
+++ b/2720132-lab2.html
@@ -20,7 +20,8 @@
         <section>
             <h2>About Me</h2>
             <p>My name is Jan Moloto I was born in Limpopo at a small village of Lephalale called Ditloung.<br>
-                I am now in my third year of Computer Science at The University of The Witwatersrand,which has gotten more interesting for me.
+                I am now in my third year of Computer Science at The University of The Witwatersrand,which has gotten more interesting for me.<br>
+                I like to sing in a choir at my spare time to move me away from reality.
             </p>
         </section>
         <article>
